--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,10 @@
-name = "drive"
+name = "onedrive-cf-index"
 type = "webpack"
 workers_dev = true
-account_id = "b87997a496f985b46b927b3f24c61de1"
-zone_id = "b04152d2c33ff4653cec1a579be6d42a"
+account_id = "e27604508db089b07599e807303d6e8a"
+zone_id = "7b90e57ac05306cf5f9661864f6e7b43"
 kv_namespaces = [
-    { binding = "BUCKET", preview_id = "55b0fc4e288a465fb225421f2af5d445", id = "09b0cf433f394b309d35d1ff3bd0bf39" }
+    { binding = "BUCKET", preview_id = "55b0fc4e288a465fb225421f2af5d445", id = "37ce3930fbcf46ee9f20477dbb73ada1" }
 ]
 
 [env.staging]
